[deaton] pushing small optimizations to GFP pipeline.

--- a/paulssonlab/src/paulssonlab/deaton/CRISPRi_Libraries/dev_notebooks/2021-09-24_Combined_Analysis_v1/1_Core_Image_Processing.ipynb
+++ b/paulssonlab/src/paulssonlab/deaton/CRISPRi_Libraries/dev_notebooks/2021-09-24_Combined_Analysis_v1/1_Core_Image_Processing.ipynb
@@ -2656,13 +2656,13 @@
    "source": [
     "fish_test.output_barcode_df(\n",
     "    \"/home/de64/scratch/de64/sync_folder/2021-06-14_lDE20_biofloat_fullrun_1/Barcodes/metadata.hdf5\"\n",
-    ")"
+    ")  # this is overwriding the global metadata; change the name!!!"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
