--- a/paulssonlab/src/paulssonlab/deaton/CRISPRi_Libraries/dev_notebooks/2021-09-24_Combined_Analysis_v1/2_Mapping_Barcodes_and_Cleaning_Data.ipynb
+++ b/paulssonlab/src/paulssonlab/deaton/CRISPRi_Libraries/dev_notebooks/2021-09-24_Combined_Analysis_v1/2_Mapping_Barcodes_and_Cleaning_Data.ipynb
@@ -51,10 +51,20 @@
    },
    "outputs": [],
    "source": [
+    "# dask_controller = tr.trcluster.dask_controller(\n",
+    "#     walltime=\"04:00:00\",\n",
+    "#     local=False,\n",
+    "#     n_workers=100,\n",
+    "#     death_timeout=5.,\n",
+    "#     memory=\"16GB\",\n",
+    "#     working_directory=\"/home/de64/scratch/de64/temp/dask\",\n",
+    "# )\n",
+    "# dask_controller.startdask()\n",
+    "\n",
     "dask_controller = tr.trcluster.dask_controller(\n",
     "    walltime=\"04:00:00\",\n",
     "    local=False,\n",
-    "    n_workers=100,\n",
+    "    n_workers=20,\n",
     "    death_timeout=5.0,\n",
     "    memory=\"16GB\",\n",
     "    working_directory=\"/home/de64/scratch/de64/temp/dask\",\n",
@@ -596,18 +606,33 @@
    },
    "outputs": [],
    "source": [
-    "for label in values_to_rescale:\n",
+    "fig = plt.figure(figsize=(30, 20))\n",
+    "values_names = [\n",
+    "    \"Mean mCherry Intensity\",\n",
+    "    \"Area\",\n",
+    "    \"Major Axis Length\",\n",
+    "    \"Minor Axis Length\",\n",
+    "    \"Volume\",\n",
+    "    \"Surface Area\",\n",
+    "]\n",
+    "for i, label in enumerate(values_to_rescale):\n",
     "    fov_series_groupby = lineage_df_subsample.groupby(\"fov\")[label]\n",
     "    fov_median_series = fov_series_groupby.apply(lambda x: np.median(x)).sort_index()\n",
     "    fov_correction_series = fov_median_series / np.max(fov_median_series)\n",
     "    fov_correction_dict = fov_correction_series.to_dict()\n",
+    "    plt.subplot(2, 3, i + 1)\n",
     "    plt.plot(fov_correction_series)\n",
-    "    plt.title(label)\n",
-    "    plt.show()\n",
+    "    plt.title(values_names[i], fontsize=22)\n",
+    "    plt.xlabel(\"FOV #\", fontsize=18)\n",
+    "    plt.ylabel(\"Scaling\", fontsize=18)\n",
+    "    plt.xticks(fontsize=18)\n",
+    "    plt.yticks(fontsize=18)\n",
+    "    plt.ylim(0.0, 1.0)\n",
     "    label_scaling = lineage_df[\"fov\"].apply(lambda x: fov_correction_dict[x]).persist()\n",
     "    lineage_df[label + \": FOV Corrected\"] = (\n",
     "        lineage_df[label] / label_scaling\n",
-    "    ).persist()"
+    "    ).persist()\n",
+    "plt.savefig(\"FOV_correction.png\", dpi=500)"
    ]
   },
   {
@@ -648,20 +673,35 @@
    },
    "outputs": [],
    "source": [
-    "for label in values_to_rescale_step_2:\n",
+    "fig = plt.figure(figsize=(30, 20))\n",
+    "values_names = [\n",
+    "    \"Mean mCherry Intensity\",\n",
+    "    \"Area\",\n",
+    "    \"Major Axis Length\",\n",
+    "    \"Minor Axis Length\",\n",
+    "    \"Volume\",\n",
+    "    \"Surface Area\",\n",
+    "]\n",
+    "for i, label in enumerate(values_to_rescale_step_2):\n",
     "    time_series_groupby = lineage_df_subsample.groupby(\"timepoints\")[label]\n",
     "    time_mode_series = time_series_groupby.apply(\n",
     "        lambda x: bootstrap_hrm(x)\n",
     "    ).sort_index()\n",
     "    time_correction_series = time_mode_series / np.max(time_mode_series)\n",
     "    time_correction_dict = time_correction_series.to_dict()\n",
+    "    plt.subplot(2, 3, i + 1)\n",
     "    plt.plot(time_correction_series)\n",
-    "    plt.title(label)\n",
-    "    plt.show()\n",
+    "    plt.title(values_names[i], fontsize=22)\n",
+    "    plt.xlabel(\"Timepoint (3 min steps)\", fontsize=18)\n",
+    "    plt.ylabel(\"Scaling\", fontsize=18)\n",
+    "    plt.xticks(fontsize=18)\n",
+    "    plt.yticks(fontsize=18)\n",
+    "    plt.ylim(0.0, 1.0)\n",
     "    label_scaling = lineage_df[\"timepoints\"].apply(lambda x: time_correction_dict[x])\n",
     "    lineage_df[label + \": Time Corrected\"] = (\n",
     "        lineage_df[label] / label_scaling\n",
-    "    ).persist()"
+    "    ).persist()\n",
+    "plt.savefig(\"Time_correction.png\", dpi=500)"
    ]
   },
   {
@@ -865,12 +905,59 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": [
+    "final_output_df = dd.read_parquet(\n",
+    "    \"/home/de64/scratch/de64/sync_folder/2021-06-14_lDE20_biofloat_fullrun_1/2021-09-24_lDE20_Lineage_Analysis\"\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test = final_output_df.loc[:1000000].compute()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test.columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test[\"major_axis_length\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dask_controller.shutdown()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
