--- a/paulssonlab/src/paulssonlab/deaton/CRISPRi_Libraries/dev_notebooks/2021-09-24_Combined_Analysis_v1/3_Feature_Processing.ipynb
+++ b/paulssonlab/src/paulssonlab/deaton/CRISPRi_Libraries/dev_notebooks/2021-09-24_Combined_Analysis_v1/3_Feature_Processing.ipynb
@@ -153,7 +153,7 @@
     "dask_controller = tr.trcluster.dask_controller(\n",
     "    walltime=\"04:00:00\",\n",
     "    local=False,\n",
-    "    n_workers=50,\n",
+    "    n_workers=100,\n",
     "    memory=\"16GB\",\n",
     "    working_directory=headpath + \"/dask\",\n",
     ")\n",
@@ -169,6 +169,17 @@
    "outputs": [],
    "source": [
     "dask_controller.displaydashboard()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "dask_controller.shutdown()"
    ]
   },
   {
@@ -296,6 +307,14 @@
     "    final_output_df.groupby(\"phenotype trenchid\").apply(lambda x: x.iloc[0]).compute()\n",
     ")\n",
     "\n",
+    "values_names = [\n",
+    "    \"Volume Growth Rate (linear)\",\n",
+    "    \"Volume Growth Rate (ratio)\",\n",
+    "    \"Division Length\",\n",
+    "    \"Minor Axis Length\",\n",
+    "    \"Mean mCherry Intensity\",\n",
+    "    \"Interdivision Time\",\n",
+    "]\n",
     "plt.figure(figsize=(22, 16))\n",
     "query_list = []\n",
     "for i, filter_param in enumerate(filter_params):\n",
@@ -311,8 +330,11 @@
     "        np.max(final_output_df_onetrench[filter_param + \": Probability\"]),\n",
     "    )\n",
     "\n",
-    "    plt.subplot(3, 5, i + 1)\n",
-    "    plt.title(filter_param)\n",
+    "    plt.subplot(2, 3, i + 1)\n",
+    "    plt.title(values_names[i], fontsize=22)\n",
+    "    plt.xlabel(\"Unnormalized Likelihood\", fontsize=18)\n",
+    "    plt.xticks(fontsize=18)\n",
+    "    plt.yticks(fontsize=18)\n",
     "    plt.hist(\n",
     "        final_output_df_onetrench[\n",
     "            final_output_df_onetrench[filter_param + \": Probability\"] < prob_threshold\n",
@@ -327,7 +349,7 @@
     "        bins=50,\n",
     "        range=(min_v, max_v),\n",
     "    )\n",
-    "plt.show()\n",
+    "plt.savefig(\"Prob_threshold.png\", dpi=500)\n",
     "\n",
     "compiled_query = \" and \".join(query_list)\n",
     "final_output_df_onetrench_filtered = final_output_df_onetrench.query(compiled_query)\n",
@@ -453,6 +475,116 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "yeo_subsample = 0.1\n",
+    "\n",
+    "subsample_df = final_output_df_filtered.sample(frac=yeo_subsample).persist()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "subsample_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "late_phenotypes = subsample_df[subsample_df[\"final timepoints\"] > 100]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "all_param_values = (\n",
+    "    subsample_df[\"Mean: mCherry Intensity\"].astype(float).compute().tolist()\n",
+    ")\n",
+    "all_param_values = np.array(all_param_values)\n",
+    "all_param_values = all_param_values[~np.isnan(all_param_values)]\n",
+    "l_norm = sp.stats.yeojohnson_normmax(all_param_values)\n",
+    "\n",
+    "all_param_values = (\n",
+    "    late_phenotypes[\"Mean: mCherry Intensity\"].astype(float).compute().tolist()\n",
+    ")\n",
+    "all_param_values = np.array(all_param_values)\n",
+    "all_param_values = all_param_values[~np.isnan(all_param_values)]\n",
+    "\n",
+    "yj_transformed = sp.stats.yeojohnson(all_param_values, lmbda=l_norm)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.figure(figsize=(22, 16))\n",
+    "\n",
+    "plt.subplot(2, 2, 1)\n",
+    "plt.title(\"Mean mCherry Intensity\", fontsize=22)\n",
+    "plt.xticks(fontsize=18)\n",
+    "plt.yticks(fontsize=18)\n",
+    "plt.hist(all_param_values, bins=100)\n",
+    "plt.subplot(2, 2, 2)\n",
+    "plt.title(\"Mean mCherry Intensity (log frequency)\", fontsize=22)\n",
+    "plt.xticks(fontsize=18)\n",
+    "plt.yticks(fontsize=18)\n",
+    "plt.hist(all_param_values, bins=100, log=True)\n",
+    "plt.subplot(2, 2, 3)\n",
+    "plt.title(\"Centered Yeo-Johnson Transformed mCherry\", fontsize=22)\n",
+    "plt.xticks(fontsize=18)\n",
+    "plt.yticks(fontsize=18)\n",
+    "plt.hist(\n",
+    "    yj_transformed - np.median(yj_transformed),\n",
+    "    bins=100,\n",
+    "    range=(-1 * (10**-6), 4 * (10**-6)),\n",
+    ")\n",
+    "plt.subplot(2, 2, 4)\n",
+    "plt.title(\"Centered Yeo-Johnson Transformed mCherry (log frequency)\", fontsize=22)\n",
+    "plt.xticks(fontsize=18)\n",
+    "plt.yticks(fontsize=18)\n",
+    "plt.hist(\n",
+    "    yj_transformed - np.median(yj_transformed),\n",
+    "    bins=100,\n",
+    "    log=True,\n",
+    "    range=(-1 * (10**-6), 4 * (10**-6)),\n",
+    ")\n",
+    "\n",
+    "plt.savefig(\"YJ_transform.png\", dpi=500)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "yj_transformed"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {
     "tags": []
    },
@@ -522,6 +654,48 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# from statsmodels.nonparametric import kernel_regression\n",
+    "# from scipy.stats import iqr\n",
+    "# from statsmodels.nonparametric.smoothers_lowess import lowess\n",
+    "# import sklearn as skl\n",
+    "# from tslearn.clustering import TimeSeriesKMeans\n",
+    "# from tslearn.preprocessing import TimeSeriesScalerMeanVariance\n",
+    "\n",
+    "\n",
+    "# def timeseries_kernel_reg(df, y_label, min_tpt, max_tpt, kernel_bins, kernel_bandwidth):\n",
+    "#     def kernel_reg(x_arr,y_arr,start=min_tpt,end=max_tpt,kernel_bins=kernel_bins,kernel_bandwidth=kernel_bandwidth):\n",
+    "#         intervals = np.linspace(start, end, num=kernel_bins, dtype=float)\n",
+    "#         w = kernel_regression.KernelReg(y_arr,x_arr,\"c\",reg_type=\"lc\",bw=np.array([kernel_bandwidth]),ckertype=\"gaussian\").fit(intervals)[0]\n",
+    "#         reg_x, reg_y = (intervals, w)\n",
+    "#         return reg_x, reg_y\n",
+    "\n",
+    "#     kernel_result = df.groupby(\"sgRNAid\").apply(lambda x: kernel_reg((x[\"final timepoints\"].values + x[\"initial timepoints\"].values) / 2,x[y_label].values,)[1],meta=float,)\n",
+    "#     return kernel_result\n",
+    "\n",
+    "\n",
+    "# def get_all_kernel_regs(df, y_label_list, min_tpt, max_tpt, kernel_bins=20, kernel_bandwidth=10):\n",
+    "#     out_df = copy.copy(df)\n",
+    "\n",
+    "#     for y_label in y_label_list:\n",
+    "#         kernel_result = timeseries_kernel_reg(out_df, y_label, min_tpt, max_tpt, kernel_bins, kernel_bandwidth)\n",
+    "#         out_df[\"Kernel Trace: \" + y_label] = kernel_result.persist()\n",
+    "\n",
+    "#     return out_df"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Trying to interpolate trenchwise instead of sgRNAwise"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "from statsmodels.nonparametric import kernel_regression\n",
     "from scipy.stats import iqr\n",
     "from statsmodels.nonparametric.smoothers_lowess import lowess\n",
@@ -551,14 +725,13 @@
     "        reg_x, reg_y = (intervals, w)\n",
     "        return reg_x, reg_y\n",
     "\n",
-    "    kernel_result = df.groupby(\"sgRNAid\").apply(\n",
+    "    kernel_result = df.groupby(\"trenchid\").apply(\n",
     "        lambda x: kernel_reg(\n",
     "            (x[\"final timepoints\"].values + x[\"initial timepoints\"].values) / 2,\n",
     "            x[y_label].values,\n",
     "        )[1],\n",
     "        meta=float,\n",
     "    )\n",
-    "\n",
     "    return kernel_result\n",
     "\n",
     "\n",
@@ -579,12 +752,113 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "trenchiddf = scoredf_noidx.reset_index().set_index(\"trenchid\", drop=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "N_Observations_thr = 4\n",
+    "# making an observation grid to project vals onto\n",
     "\n",
-    "sgrnadf_wellsampled = sgrnadf[sgrnadf[\"N Observations\"] >= N_Observations_thr].persist()"
+    "min_tpt = 0\n",
+    "max_tpt = 143\n",
+    "\n",
+    "kernel_bins = 20\n",
+    "kernel_bandwidth = 10\n",
+    "\n",
+    "score_params = [param + \": Yeo-Johnson: z score\" for param in params_to_transform]\n",
+    "other_params = [\n",
+    "    \"Mean Linear Growth Rate: Volume\",\n",
+    "    \"Mean Exponential Growth Rate: Volume\",\n",
+    "    \"Birth: major_axis_length\",\n",
+    "    \"Division: major_axis_length\",\n",
+    "    \"Birth: Volume\",\n",
+    "    \"Division: Volume\",\n",
+    "    \"Birth: Surface Area\",\n",
+    "    \"Division: Surface Area\",\n",
+    "    \"Mean: minor_axis_length\",\n",
+    "    \"Mean: mCherry Intensity\",\n",
+    "    \"Delta t\",\n",
+    "]\n",
+    "\n",
+    "\n",
+    "def temp_kernel_reg(\n",
+    "    x_arr,\n",
+    "    y_arr,\n",
+    "    start=min_tpt,\n",
+    "    end=max_tpt,\n",
+    "    kernel_bins=kernel_bins,\n",
+    "    kernel_bandwidth=kernel_bandwidth,\n",
+    "):\n",
+    "    intervals = np.linspace(start, end, num=kernel_bins, dtype=float)\n",
+    "    w = kernel_regression.KernelReg(\n",
+    "        y_arr,\n",
+    "        x_arr,\n",
+    "        \"c\",\n",
+    "        reg_type=\"lc\",\n",
+    "        bw=np.array([kernel_bandwidth]),\n",
+    "        ckertype=\"gaussian\",\n",
+    "    ).fit(intervals)[0]\n",
+    "    reg_x, reg_y = (intervals, w)\n",
+    "    return reg_x, reg_y\n",
+    "\n",
+    "\n",
+    "trenchid_list = trenchiddf.index.unique().compute().tolist()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "rand_trenchid = np.random.choice(trenchid_list)\n",
+    "\n",
+    "rand_trenchid_df = trenchiddf.loc[rand_trenchid].compute()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "x_arr = (\n",
+    "    rand_trenchid_df[\"final timepoints\"].values\n",
+    "    + rand_trenchid_df[\"initial timepoints\"].values\n",
+    ") / 2\n",
+    "y_arr = rand_trenchid_df[\"Division: major_axis_length\"]\n",
+    "reg_x, reg_y = temp_kernel_reg(x_arr, y_arr)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.figure(figsize=(12, 8))\n",
+    "\n",
+    "plt.title(\"Division Length Kernel Regression\", fontsize=22)\n",
+    "plt.xticks(fontsize=18)\n",
+    "plt.yticks(fontsize=18)\n",
+    "plt.xlabel(\"Timepoint\", fontsize=18)\n",
+    "plt.ylabel(\"Division Length\", fontsize=18)\n",
+    "plt.scatter(x_arr, y_arr)\n",
+    "plt.plot(reg_x, reg_y)\n",
+    "plt.ylim(3, 9)\n",
+    "\n",
+    "plt.savefig(\"Kernel_Reg_Example.png\", dpi=500)"
    ]
   },
   {
@@ -617,7 +891,7 @@
     "]\n",
     "\n",
     "trace_df_raw = get_all_kernel_regs(\n",
-    "    sgrnadf_wellsampled,\n",
+    "    trenchiddf,\n",
     "    other_params,\n",
     "    min_tpt,\n",
     "    max_tpt,\n",
@@ -632,7 +906,84 @@
     "    kernel_bins=kernel_bins,\n",
     "    kernel_bandwidth=kernel_bandwidth,\n",
     ")\n",
-    "trace_df = trace_df_raw.groupby(\"sgRNAid\").apply(lambda x: x.iloc[0]).compute()"
+    "trace_df = trace_df_raw.groupby(\"trenchid\").apply(lambda x: x.iloc[0]).compute()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "all_kernel_traces = score_params + other_params\n",
+    "all_kernel_traces = [\"Kernel Trace: \" + item for item in all_kernel_traces]\n",
+    "\n",
+    "for kernel_trace in all_kernel_traces:\n",
+    "    mean_kernel = trace_df.groupby(\"sgRNAid\")[kernel_trace].apply(\n",
+    "        lambda x: np.mean(np.array(x.tolist()), axis=0)\n",
+    "    )\n",
+    "    sgrnadf[kernel_trace] = mean_kernel\n",
+    "\n",
+    "sgrnadf = sgrnadf.groupby(\"sgRNAid\").apply(lambda x: x.iloc[0]).persist()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "N_Observations_thr = 4\n",
+    "\n",
+    "sgrnadf_wellsampled = sgrnadf[sgrnadf[\"N Observations\"] >= N_Observations_thr].persist()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# # making an observation grid to project vals onto\n",
+    "\n",
+    "# min_tpt = 0\n",
+    "# max_tpt = 143\n",
+    "\n",
+    "# kernel_bins = 20\n",
+    "# kernel_bandwidth = 10\n",
+    "\n",
+    "# score_params = [param + \": Yeo-Johnson: z score\" for param in params_to_transform]\n",
+    "# other_params = [\n",
+    "#     \"Mean Linear Growth Rate: Volume\",\n",
+    "#     \"Mean Exponential Growth Rate: Volume\",\n",
+    "#     \"Birth: major_axis_length\",\n",
+    "#     \"Division: major_axis_length\",\n",
+    "#     \"Birth: Volume\",\n",
+    "#     \"Division: Volume\",\n",
+    "#     \"Birth: Surface Area\",\n",
+    "#     \"Division: Surface Area\",\n",
+    "#     \"Mean: minor_axis_length\",\n",
+    "#     \"Mean: mCherry Intensity\",\n",
+    "#     \"Delta t\",\n",
+    "# ]\n",
+    "\n",
+    "# trace_df_raw = get_all_kernel_regs(\n",
+    "#     sgrnadf_wellsampled,\n",
+    "#     other_params,\n",
+    "#     min_tpt,\n",
+    "#     max_tpt,\n",
+    "#     kernel_bins=kernel_bins,\n",
+    "#     kernel_bandwidth=kernel_bandwidth,\n",
+    "# )\n",
+    "# trace_df_raw = get_all_kernel_regs(\n",
+    "#     trace_df_raw,\n",
+    "#     score_params,\n",
+    "#     min_tpt,\n",
+    "#     max_tpt,\n",
+    "#     kernel_bins=kernel_bins,\n",
+    "#     kernel_bandwidth=kernel_bandwidth,\n",
+    "# )\n",
+    "# trace_df = trace_df_raw.groupby(\"sgRNAid\").apply(lambda x: x.iloc[0]).compute()"
    ]
   },
   {
@@ -724,7 +1075,7 @@
     "    \"trenchid\",\n",
     "]\n",
     "\n",
-    "trace_df = trace_df.drop(columns=non_group_measurements)\n",
+    "trace_df = sgrnadf.drop(columns=non_group_measurements).compute()\n",
     "trace_df[\"phenotype trenchids\"] = (\n",
     "    trace_df_raw.groupby(\"sgRNAid\")\n",
     "    .apply(lambda x: x[\"phenotype trenchid\"].unique().tolist())\n",
@@ -762,7 +1113,7 @@
    },
    "outputs": [],
    "source": [
-    "strong_effect_threshold = 15\n",
+    "strong_effect_threshold = 20\n",
     "\n",
     "zero_vector = np.zeros((1, trace_df_nan_filtered[\"Feature Vector\"].iloc[0].shape[0]))\n",
     "feature_arr = np.array(trace_df_nan_filtered[\"Feature Vector\"].tolist())\n",
@@ -835,7 +1186,7 @@
    "outputs": [],
    "source": [
     "trace_df_nan_filtered.to_pickle(\n",
-    "    \"/home/de64/scratch/de64/sync_folder/2021-06-14_lDE20_biofloat_fullrun_1/2021-09-25_gene_cluster_df_no_filter.pkl\"\n",
+    "    \"/home/de64/scratch/de64/sync_folder/2021-06-14_lDE20_biofloat_fullrun_1/2021-10-07_gene_cluster_df_no_filter.pkl\"\n",
     ")"
    ]
   },
@@ -846,7 +1197,7 @@
    "outputs": [],
    "source": [
     "sgrnadf_strong_effect.to_pickle(\n",
-    "    \"/home/de64/scratch/de64/sync_folder/2021-06-14_lDE20_biofloat_fullrun_1/2021-09-25_gene_cluster_df.pkl\"\n",
+    "    \"/home/de64/scratch/de64/sync_folder/2021-06-14_lDE20_biofloat_fullrun_1/2021-10-07_gene_cluster_df.pkl\"\n",
     ")"
    ]
   },
@@ -1153,7 +1504,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
