[shenker/cloning] WIP deg tags.

--- a/paulssonlab/src/paulssonlab/shenker/cloning/220124 Deg tags.ipynb
+++ b/paulssonlab/src/paulssonlab/shenker/cloning/220124 Deg tags.ipynb
@@ -49,12 +49,15 @@
     "from paulssonlab.api.util import base_url\n",
     "import paulssonlab.cloning.registry as registry\n",
     "import paulssonlab.cloning.workflow as workflow\n",
+    "import paulssonlab.cloning.design as design\n",
     "import paulssonlab.cloning.sequence as sequence\n",
     "import paulssonlab.cloning.enzyme as enzyme\n",
     "import paulssonlab.cloning.viennarna as viennarna\n",
     "import paulssonlab.cloning.thermodynamics as thermodynamics\n",
     "import paulssonlab.cloning.primers as primers\n",
-    "import paulssonlab.cloning.ncbi as ncbi"
+    "import paulssonlab.cloning.ncbi as ncbi\n",
+    "import paulssonlab.cloning.commands.parser as cmd_parser\n",
+    "import paulssonlab.cloning.commands.semantics as cmd_semantics"
    ]
   },
   {
@@ -166,40 +169,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Test"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "part_names = [\"sigW\", \"rsiW\", \"ECF20_992\", \"AS20_992\", \"sfGFP\"]  # pick correct FPs"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "part_seqs = {name: reg.get(name)[\"_seq\"] for name in part_names}"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "reg.get(\"ECF20_992\")[\"_seq\"]"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "# Deg tags"
    ]
   },
@@ -238,6 +207,50 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tag_normalized = {name: workflow.normalize_seq(seq) for name, seq in tags_wt.items()}\n",
+    "tag_prefixes = {\n",
+    "    name: seq[: seq.find(upstream_overhang)] for name, seq in tag_normalized.items()\n",
+    "}\n",
+    "tag_prefixes_list = list(tag_prefixes.values())\n",
+    "tag_prefix = tag_prefixes_list[0]\n",
+    "assert all(s == tag_prefix for s in tag_prefixes_list)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tag_suffix = sequence.smoosh_sequences(\n",
+    "    workflow.normalize_seq(\"taa\"), degtag_overhangs[1]\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tag_parts = {name: seq[len(tag_prefix) :] + tag_suffix for name, seq in tags_wt.items()}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tag_parts"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -250,8 +263,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "head_length = 6  # nt\n",
-    "tail_length = 9  # nt\n",
+    "head_length = 6 - len(tag_prefix)  # nt\n",
+    "tail_length = 9 + len(tag_suffix)  # nt\n",
     "nnk_length = 6  # aa's"
    ]
   },
@@ -262,7 +275,7 @@
    "outputs": [],
    "source": [
     "tags = {}\n",
-    "for name, seq in tags_wt.items():\n",
+    "for name, seq in tag_parts.items():\n",
     "    tags[f\"degtag_{name}\"] = {\n",
     "        \"Sequence\": seq,\n",
     "        \"Description\": f\"Wild-type {name} ClpXP degradation tag from Andersen 1998.\",\n",
@@ -281,6 +294,16 @@
    "outputs": [],
    "source": [
     "tags"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# OLIGOS\n",
+    "# PARTS"
    ]
   },
   {
@@ -325,7 +348,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sequence.find_aligned_substring(\"abcabcxyzabcxyzabc?\", \"xyz\", last=True)"
+    "# part_names = [\"sigW\", \"rsiW\", \"ECF20_992\", \"AS20_992\", \"sfGFP\"]  # TODO: pick correct FPs\n",
+    "part_names = [\"sigW\", \"rsiW\"]"
    ]
   },
   {
@@ -334,7 +358,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "workflow.find_coding_sequence(\"xxyxyxyyyxyxyyxxyxyatg******taatga??\")"
+    "part_seqs = {name: reg.get(name)[\"_seq\"] for name in part_names}"
    ]
   },
   {
@@ -343,7 +367,195 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\"xxyxyxyyyxyxyyxxyxyatg******taatga??\"[19:34]"
+    "part_seqs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "part_seq = part_seqs[\"sigW\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "workflow.find_coding_sequence(part_seq)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "workflow.get_source_plasmid(reg, lib_parts[\"sigW\"][\"Usage\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "reg.get(\"pLIB214\")[\"_seq\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "part_name = part_names[0]\n",
+    "part = reg.get(part_name)\n",
+    "part_seq = part[\"_seq\"]\n",
+    "cds_start, cds_stop = workflow.find_coding_sequence(part_seq)\n",
+    "# part_seq = part_seq[cds_start:cds_stop]\n",
+    "plasmid_name = workflow.get_source_plasmid(reg, part[\"Usage\"])\n",
+    "plasmid_seq = reg.get(plasmid_name)[\"_seq\"]\n",
+    "part_start, part_stop, _, _ = sequence.find_subsequence(\n",
+    "    plasmid_seq, part_seq, min_score=len(part_seq)\n",
+    ")\n",
+    "start = part_start + cds_start\n",
+    "stop = part_stop - (len(part_seq) - cds_stop)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plasmid_seq_forward = plasmid_seq.reindex(stop)\n",
+    "plasmid_seq_reverse = plasmid_seq.reindex(stop).reverse_complement()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "degtag_overhangs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "design.golden_gate_placeholder(Restriction.BsaI, None, *degtag_overhangs)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "placeholder = None"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tm_binding = 60\n",
+    "tm_homology = 55\n",
+    "homology = next(\n",
+    "    primers.iter_primers(\n",
+    "        sequence.get_seq(plasmid_seq_reverse), min_tm=tm_homology, anchor_3prime=True\n",
+    "    )\n",
+    ")\n",
+    "reverse_primer = next(\n",
+    "    primers.iter_primers(\n",
+    "        sequence.get_seq(plasmid_seq_reverse),\n",
+    "        min_tm=tm_binding,\n",
+    "        min_length=len(homology),\n",
+    "        anchor_3prime=True,\n",
+    "    )\n",
+    ")\n",
+    "forward_primer = next(\n",
+    "    primers.iter_primers(\n",
+    "        sequence.get_seq(plasmid_seq_forward), min_tm=tm_binding, anchor_3prime=True\n",
+    "    )\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "homology"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "reverse_primer"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plasmid_seq_forward"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plasmid_seq_reverse[::-1][-20:]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plasmid_seq_reverse.reverse_complement()[-20:]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "next(\n",
+    "    primers.iter_primers(\n",
+    "        sequence.get_seq(plasmid_seq_forward), min_tm=65, anchor_3prime=True\n",
+    "    )\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "part_seq[-10:]"
    ]
   },
   {
@@ -353,6 +565,8 @@
    "outputs": [],
    "source": [
     "# find stop, extract CDS\n",
+    "# get storage plasmid sequence\n",
+    "# find CDS location on storage plasmid\n",
     "# generate Tm>50 reverse primer abutting stop codon\n",
     "# generate Tm>50 forward primer starting on stop codon\n",
     "# extend forward primer to generate Tm>60-65 overhang\n",
@@ -376,351 +590,6 @@
    "source": [
     "# storage vectors"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Old"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Source plasmids"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%%time\n",
-    "plasmids = {\n",
-    "    row[\"Names\"]: plib_maps[id_]\n",
-    "    for id_, row in plib_plasmids.items()\n",
-    "    if \"cluzel-fp\" in row[\"Tags\"]\n",
-    "}"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "plasmids.keys()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Extract FP inserts"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%%time\n",
-    "locations = {\n",
-    "    name: sequence.amplicon_location(\n",
-    "        seq, flanks[0], sequence.reverse_complement(flanks[1])\n",
-    "    )\n",
-    "    for name, seq in plasmids.items()\n",
-    "}"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "inserts = {name: seq.slice(*locations[name]) for name, seq in plasmids.items()}"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Check restriction sites"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "for enzyme_name in (\"BsaI\", \"BsmBI\", \"BbsI\", \"AarI\"):\n",
-    "    names_with_cuts = []\n",
-    "    for name, seq in inserts.items():\n",
-    "        cuts = enzyme.re_search(seq, enzyme_name)\n",
-    "        if cuts:\n",
-    "            names_with_cuts.append(name)\n",
-    "    print(f\"{enzyme_name} ({len(names_with_cuts)}): {', '.join(names_with_cuts)}\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Find FP common ends"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "names = np.array(list(inserts.keys()))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "max_end_length = 40"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "seqs = [(v.seq_lower()[:max_end_length], k) for k, v in inserts.items()]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def cluster_by_prefix(seqs):\n",
-    "    max_length = max(len(s) for s, _ in seqs)\n",
-    "    for idx in range(max_length):\n",
-    "        base0 = seqs[0][0][idx]\n",
-    "        if not all(s[0][idx] == base0 for s in seqs[1:]):\n",
-    "            break\n",
-    "    if idx == max_length - 1:\n",
-    "        return seqs, idx\n",
-    "    clusters = {}\n",
-    "    for seq in seqs:\n",
-    "        key = seq[0][: idx + 1]\n",
-    "        clusters.setdefault(key, [])\n",
-    "        clusters[key].append(seq)\n",
-    "    # print(\">>>\",clusters)\n",
-    "    clusters = {k: cluster_by_prefix(v) for k, v in clusters.items()}\n",
-    "    return clusters, idx\n",
-    "\n",
-    "\n",
-    "c = cluster_by_prefix(seqs)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Design primers"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import primer3plus"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "flanks = workflow.concatenate_flanks(gg_overhangs, storage_flanks)\n",
-    "primers.primer3_amplicon(inserts[\"pEB1-SCFP3A\"], flanks, return_many=3)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# TODO: make find_primer_binding_site more general,\n",
-    "# allow specifying score func so can find amplicons with overhangs on both sides?"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "# USE CASES:\n",
-    "# 1) take desired product, template seq, find overhangs\n",
-    "# 2) take amplicon, optional overhangs\n",
-    "\n",
-    "# TODO:\n",
-    "# tm/ta settings for Q5/phusion\n",
-    "\n",
-    "\n",
-    "primer3_amplicon_primers(\n",
-    "    inserts[\"pEB1-SCFP3A\"], [gg_overhangs, storage_flanks], return_many=3\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Sequence matching test"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "a = \"zzaaaaaxxx\"\n",
-    "b = \"12aaayyxx\"\n",
-    "sequence.longest_contiguous_matching(a, b)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import random\n",
-    "\n",
-    "\n",
-    "def randdna(n):\n",
-    "    return \"\".join(random.choices(\"atcg\", k=n))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "a = sequence.DsSeqRecord(\n",
-    "    Seq(randdna(30) + \"aaaaggggttttgggg\" + randdna(30)), circular=True\n",
-    ")\n",
-    "b = sequence.DsSeqRecord(Seq(\"aaaaggggttttgggg\"))\n",
-    "c = sequence.DsSeqRecord(Seq(\"aaaaggggttttgggc\"))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "a"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "b"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "sequence.enumerate_matches(a, b)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "a[29:45]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "b[0:16]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "sequence.enumerate_primer_binding_sites(a, b)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "sequence.enumerate_primer_binding_sites(a, c, require_3prime_clamp=False)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "e = sequence.DsSeqRecord(\n",
-    "    Seq(randdna(1) + \"atgcgcgggaaaatgcgcacaacattagcgacctagc\" + randdna(1)),\n",
-    "    circular=True,\n",
-    ")\n",
-    "f = sequence.DsSeqRecord(Seq(\"atgcgcgggaaaatgcgcacaacattagcgacctagc\"))\n",
-    "g = sequence.DsSeqRecord(Seq(\"NNNNatgcgcgggaaaatgcgcacaacattagcgacctagcMMMM\"))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "sequence.amplicon_tails(e, g, min_score=20)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
